--- a/splashPage/index.html
+++ b/splashPage/index.html
@@ -28,19 +28,22 @@
     <div class="container">
 		<div id="homeMain" >
 			<div id="quotes"></div> 
-			<div id="winc"></div>
+			<div id="world"></div>
+			<div id="inConversation"></div>
 			<div id="homeLinks">
 				<p><a href="">Who We Are</a></p>	
+				<div class="dots"></div>	
 				<p><a href="">What We Do</a></p>	
+				<div class="dots"></div>	
 				<p><a href="">WinC News</a></p>	
+				<div class="dots"></div>	
 				<p><a href="converse.html">Join A Conversation</a></p>	
 			</div>
 		</div>
 
-      <footer style="text-align:center;color:white;">
-        <p>World In Conversation &copy;2012</p>
-      </footer>
-
+		<div id="splashSocial" class="hide">
+			<p><a href="http://www.facebook.com/worldinconversationproject/">Facebook</a> -	<a href="http://twitter.com/worldinconvo">Twitter</a></p>
+		</div>
     </div> <!-- /container -->
 
     <!-- Le javascript
