commented out changes until ready to roll out

--- a/splashPage/index.html
+++ b/splashPage/index.html
@@ -30,7 +30,7 @@
 			<div id="quotes"></div> 
 			<div id="world"></div>
 			<div id="inConversation"></div>
-            <div id="centerForDiplomacy"></div>
+            <!--div id="centerForDiplomacy"></div-->
 			<div id="homeLinks">
                 <p><a href="">Who We Are</a></p>
 				<div class="dots"></div>	
