Revert a46bd35..86ec116
This rolls back to commit a46bd357eaae92f1e71f1cda1c292b66ddc5efd1.

--- a/splashPage/index.html
+++ b/splashPage/index.html
@@ -45,7 +45,7 @@
 		<div id="splashSocial" class="hide">
 			<p><a href="http://www.facebook.com/worldinconversation/">Facebook</a> -	<a href="http://twitter.com/worldinconvo">Twitter</a></p>
 		</div>
-    </div> 
+    </div> <!-- /container -->
 
     <!-- Le javascript
     ================================================== -->
